added assembly reference to nuspec

--- a/nuget/GitmoSharp.0.1.0.nuspec
+++ b/nuget/GitmoSharp.0.1.0.nuspec
@@ -17,5 +17,7 @@
             <frameworkAssembly assemblyName="System.Runtime.Serialization" targetFramework="" />
         </frameworkAssemblies>
     </metadata>
-    <files />
+    <files>
+        <file src="..\GitmoSharp\bin\Debug\GitmoSharp.dll" target="lib\GitmoSharp.dll" />
+    </files>
 </package>
