--- a/GitmoSharp/GitmoSharp.csproj
+++ b/GitmoSharp/GitmoSharp.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GitExtensions.cs" />
     <Compile Include="Gitmo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Zipper.cs" />
