--- a/GitmoSharp/GitmoSharp.csproj
+++ b/GitmoSharp/GitmoSharp.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="GitExtensions.cs" />
     <Compile Include="Gitmo.cs" />
+    <Compile Include="GitSearchIndex.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Zipper.cs" />
   </ItemGroup>
