--- a/GitmoSharp/GitmoSharp.csproj
+++ b/GitmoSharp/GitmoSharp.csproj
@@ -13,5 +13,6 @@
     <PackageReference Include="SharpZipLib" Version="1.0.0-rc2" />
     <PackageReference Include="LibGit2Sharp" Version="0.25.2" />
     <PackageReference Include="NuGet.Build.Packaging" Version="0.2.0" />
+    <PackageReference Include="Octokit" Version="0.31.0" />
   </ItemGroup>
 </Project>
