--- a/gitmo/gitmo.csproj
+++ b/gitmo/gitmo.csproj
@@ -1,11 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <PackOnBuild>true</PackOnBuild>
+    <PackageId>gitmo</PackageId>
     <PackageVersion>0.1.0</PackageVersion>
     <Authors>Joel Martinez</Authors>
+    <Title>gitmo - Git CI Helper CLI</Title>
+    <Description>
+      Backed by GitmoSharp, this CLI simplifies a few
+      common git-related actions that are commonly used in CI processes such as 
+      opening github pull requests (after some local processing).
+    </Description>
+    <RepositoryUrl>https://github.com/joelmartinez/GitmoSharp</RepositoryUrl>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
