--- a/gitmo/gitmo.csproj
+++ b/gitmo/gitmo.csproj
@@ -3,9 +3,10 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <LangVersion>7.1</LangVersion>
     <PackOnBuild>true</PackOnBuild>
     <PackageId>gitmo</PackageId>
-    <PackageVersion>0.1.0</PackageVersion>
+    <PackageVersion>0.2.0</PackageVersion>
     <Authors>Joel Martinez</Authors>
     <Title>gitmo - Git CI Helper CLI</Title>
     <Description>
@@ -14,19 +15,35 @@
       opening github pull requests (after some local processing).
     </Description>
     <RepositoryUrl>https://github.com/joelmartinez/GitmoSharp</RepositoryUrl>
+    <IsTool>true</IsTool>
   </PropertyGroup>
 
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <LangVersion>7.1</LangVersion>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <LangVersion>7.1</LangVersion>
-  </PropertyGroup>
-  <ItemGroup>
+  <ItemGroup> 
     <PackageReference Include="NuGet.Build.Packaging" Version="0.2.0" />
     <PackageReference Include="Mono.Options" Version="5.3.0.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GitmoSharp\GitmoSharp.csproj" />
+  </ItemGroup>
+
+  <PropertyGroup>
+    <PackToolsPath></PackToolsPath>
+  </PropertyGroup>
+  <ItemGroup>
+    <Content Include="..\GitmoSharp\bin\$(Configuration)\netstandard2.0\**\*.*" Link="..\..\..\tools\%(Filename)%(Extension)" />
+    
+    <Content Include="..\packages\libgit2sharp\*\lib\netstandard2.0\*.dll" Link="..\..\..\tools\%(Filename)%(Extension)" />
+
+    <Content Include="..\packages\libgit2sharp.nativebinaries\*\libgit2\*.config" Link="..\..\..\tools\%(Filename)%(Extension)" />
+    <Content Include="..\packages\libgit2sharp.nativebinaries\*\runtimes\linux-x64\native\*.*" Link="..\..\..\tools\runtimes\linux-x64\native\%(Filename)%(Extension)" />
+    <Content Include="..\packages\libgit2sharp.nativebinaries\*\runtimes\osx\native\*.*" Link="..\..\..\tools\runtimes\osx\native\%(Filename)%(Extension)" />
+    <Content Include="..\packages\libgit2sharp.nativebinaries\*\runtimes\win7-x64\native\*.*" Link="..\..\..\tools\runtimes\win7-x64\native\%(Filename)%(Extension)" />
+    <Content Include="..\packages\libgit2sharp.nativebinaries\*\runtimes\win7-x86\native\*.*" Link="..\..\..\tools\runtimes\win7-x86\native\%(Filename)%(Extension)" />
+
+    <Content Include="..\packages\mono.options\*\lib\netstandard1.3\*.*" Link="..\..\..\tools\%(Filename)%(Extension)" />
+
+    <Content Include="..\packages\octokit\*\lib\netstandard1.1\*.*" Link="..\..\..\tools\%(Filename)%(Extension)" />
+    
+    <Content Include="..\packages\sharpziplib\*\lib\netstandard2.0\*.*" Link="..\..\..\tools\%(Filename)%(Extension)" />
   </ItemGroup>
 </Project>
