--- a/gitmo/gitmo.csproj
+++ b/gitmo/gitmo.csproj
@@ -6,7 +6,7 @@
     <LangVersion>7.1</LangVersion>
     <PackOnBuild>true</PackOnBuild>
     <PackageId>gitmo</PackageId>
-    <PackageVersion>0.2.1</PackageVersion>
+    <PackageVersion>0.2.2</PackageVersion>
     <Authors>Joel Martinez</Authors>
     <Title>gitmo - Git CI Helper CLI</Title>
     <Description>
@@ -27,6 +27,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="..\gitmo\bin\$(Configuration)\netcoreapp2.1\gitmo.deps.json" Link="..\..\..\tools\%(Filename)%(Extension)" />
+    
     <Content Include="..\GitmoSharp\bin\$(Configuration)\netstandard2.0\**\*.*" Link="..\..\..\tools\%(Filename)%(Extension)" />
     
     <Content Include="..\packages\libgit2sharp\*\lib\netstandard2.0\*.dll" Link="..\..\..\tools\%(Filename)%(Extension)" />
